--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "bootstrap": "^4.5.3",
+    "cookie-parser": "^1.4.5",
     "mongoose": "^5.11.7",
     "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
